# opera

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
benchmark/: CMakeLists.txt
benchmark/results/: q1.csv  q12.csv  q12_base.csv  q12_nc.csv  q15.csv  q15_base.csv  q15_nc.csv  q17.csv  q17_base.csv  q17_nc.csv  q19.csv  q19_base.csv  q19_nc.csv  q1_base.csv  q1_nc.csv  q4.csv  q4_base.csv  q4_nc.csv  q6.csv  q6_base.csv  q6_nc.csv  run.sh
benchmark/tpch_q1/: CMakeLists.txt  tpch_q1.cu
benchmark/tpch_q6/: CMakeLists.txt  tpch_q6.cu
benchmark/utils/: data_q1.h  data_q6.h  utils.h  zipfian_int_distribution.h
cuTFHEpp/: README.md
